        PR c++/7050         * expr.c (store_expr): Don't attempt to store void-typed trees,         just evaluate them for side effects.         * cp/expr.c (cxx_expand_expr): Return const0_rtx for throw         expressions.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@64268 138bc75d-0d04-0410-961f-82ee72b054a4